# mecanumbot

./: README.md
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/mecanumbot_hardware/include/mecanumbot_hardware/: motor_controller.hpp
install/mecanumbot_hardware/lib/mecanumbot_hardware/: mecanumbot_system
install/mecanumbot_hardware/share/mecanumbot_hardware/: package.sh
install/mecanumbot_hardware/share/mecanumbot_hardware/config/: mecanumbot_controllers.yaml
install/mecanumbot_hardware/share/mecanumbot_hardware/launch/: mecanumbot_control.launch.py
log/: latest_build
src/mecanum_bot_hardware/: CMakeLists.txt  mecanum_bot_hardware.xml  package.xml  readme.md
src/mecanum_bot_hardware/config/: mecanum_bot_controllers.yaml
src/mecanum_bot_hardware/include/mecanum_bot_hardware/: mecanum_bot_hardware.hpp  motor_controller.hpp
src/mecanum_bot_hardware/launch/: mecanum_bot_control.launch.py
src/mecanum_bot_hardware/src/: can_interface.cpp  mecanum_bot_hardware.cpp  mecanum_bot_system.cpp  motor_controller.cpp
src/mecanum_bot_hardware/src/backup/: canopen_motor_node.cpp  motor_controller.cpp  motor_controller.hpp
src/mecanum_bot_hardware/urdf/: mecanum_bot.urdf
src/mecanumbot_hardware/: CMakeLists.txt  README.md  mecanumbot_hardware.xml  package.xml
src/mecanumbot_hardware/include/mecanumbot_hardware/: can_interface.hpp  mecanumbot_hardware.hpp
src/mecanumbot_hardware/src/: can_interface.cpp  mecanumbot_hardware.cpp  mecanumbot_system.cpp  motor_controller.cpp
src/mecanumbot_hardware/src/backup/: can_interface.cpp  main.cpp
src/mecanumbot_hardware/urdf/: mecanumbot.urdf
