<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>mecanumbot_hardware</name>
  <version>0.1.0</version>
  <description>ROS2 hardware interface for Mecanum bot with CANopen motor control</description>
  <maintainer email="byd@ubuntu.com">byd</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_lifecycle</depend>
  <depend>hardware_interface</depend>
  <depend>controller_interface</depend>
  <depend>controller_manager</depend>
  <depend>controller_manager_msgs</depend>
  <depend>pluginlib</depend>
  <depend>transmission_interface</depend>
  <depend>joint_state_broadcaster</depend>
  <depend>diff_drive_controller</depend>
  <depend>control_msgs</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <!-- 添加mecanumbot_hardware的相关导出 -->
  <export>
    <build_type>ament_cmake</build_type>
    <controller_manager plugin="${prefix}/mecanumbot_hardware.xml"/>
    <hardware_interface plugin="${prefix}/mecanumbot_hardware.xml"/>
  </export>
</package>